refactor: clean up test code, remove redundant annotations and empty lines, and simplify DTO initialization